# clursor

./: Cargo.toml  README.md  color-picker-production-plan.md
.commandcode/taste/: taste.md
plans/: m1-daemon-core.md  m2-system-tray-refinement.md  m3-overlay-window.md  m4-overlay-ui.md  progress.md
src/: clipboard.rs  color.rs  config.rs  daemon.rs  error.rs  hotkey.rs  main.rs  overlay.rs  renderer.rs  xkcd_data.rs
src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
